# maa-protocol

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DEMO.md  EMAIL_CHECKLIST.md  EMAIL_DAILY.md  EVALS.md  Err13.txt  FIRST_RUN.md  HEARTBEAT.md  IDENTITY.md  INSTALL.md  LICENSE  MEMORY.md  QUICKSTART.md  README.md  REPO_STRUCTURE.md  REVIEW_RESPONSE.md  ROADMAP.md  RUNBOOK_EMAIL.md  RUNBOOK_RESEARCH_REPORT.md  RUNBOOK_SYSTEM.md  SECURITY.md  SOUL.md  TOOLS.md  USER.md  WHAT_MAA_IS_NOT.md  action.txt  daily_research.md  email_watch_prompt.txt  knowledge_base.md  market_research_2026-03-19.py  progress.txt  pyproject.toml  requirements.txt  research_list.md  send_prime_outlook.py  (+3 more)
.githooks/: pre-commit
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: tests.yml
agents/email-monitor/: SPEC.md  revenue_followup_coordinator.py  run.sh
agents/whatsapp-assistant/: SPEC.md  emp_team.txt  router.py  run.sh
data/: retry_mb.sh  whatsapp-groups.json  whatsapp-test-report.md
data/communications/: ankit-rohit.md
data/email/: action_v12_final_resend_email.txt  action_v12_update_email.txt  approval_state.json  body_maa_files_20260425.txt  email_failure_alert_state.json  market_brief_review_2026-04-16_06-25-29.json  market_brief_review_2026-04-16_06-44-30.json  market_brief_review_2026-04-16_07-16-11.json  pending_approval_2026-04-20.json  pending_approval_2026-04-21.json  pending_approval_2026-04-22.json  pending_approval_2026-04-23.json  pending_approval_2026-04-24.json  tree_txt_email.txt
docs/: COMPARISONS.md  DEMO.md  FIRST_RUN.md  REPO_STRUCTURE.md  USE_CASES.md  WHAT_MAA_IS_NOT.md
examples/: README.md  approval_workflow.py  canary_release.py  cost_controlled_agent.py  langgraph_governance_example.py  langgraph_governance_full_example.py  multi_tenant_rbac.py
knowledge/: client-email-format.md  maa_progress.txt
maa-x/: .gitignore  README.md  pyproject.toml
maa-x/maa_x/: __init__.py  attention.py  browser.py  claims.py  codex.py  deployment.py  exceptions.py  github_automation.py  gnn.py  guidance.py  hooks.py  ipfs.py  marketplace.py  mcp.py  mcp_runtime.py  memory.py  neural.py  performance.py  plugins.py  provider_router.py  providers.py  rl.py  rvf.py  security.py  self_healing.py  wasm.py
maa-x/maa_x/compat/: __init__.py  maa_protocol.py
maa-x/maa_x/core/: __init__.py  governance.py
maa-x/maa_x/guards/: __init__.py  approval.py  self_healing.py  tenant.py
maa-x/maa_x/learning/: rl.py
maa-x/maa_x/mcp/: mcp_tools.py
maa-x/maa_x/observability/: metrics.py
maa-x/maa_x/persistence/: __init__.py
maa-x/maa_x/plugins/: __init__.py
maa-x/maa_x/routing/: provider_router.py  router.py
maa-x/maa_x/security/: threat.py
maa-x/maa_x/sparc/: engine.py
maa-x/maa_x/workers/: __init__.py
maa-x/tests/: conftest.py  test_compat.py  test_core.py  test_learning.py  test_mcp.py  test_memory.py  test_parity.py  test_persistence.py  test_platform_completion.py  test_plugins.py  test_remaining_modules.py  test_routing.py  test_security.py  test_sparc.py  test_swarm.py  test_workers.py
maa_protocol/: __init__.py  access_control.py  approval_gate.py  attention.py  browser.py  canary_router.py  claims.py  codex.py  cost_control.py  deployment.py  embeddings.py  exceptions.py  gnn.py  governance.py  guidance.py  hooks.py  marketplace.py  mcp.py  memory.py  neural.py  performance.py  plugins.py  provider_router.py  providers.py  review_smoke.py  rl.py  rvf.py  security.py  self_healing.py  swarm.py  tenant_context.py  tenant_gate.py  tests_smoke.py  wasm.py
maa_protocol.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
memory/: 2026-03-29.md  2026-03-30.md  2026-04-01-ji-suffix-placement.md  2026-04-01-microsoft-agent-lightning.md  2026-04-01-openclaw-config-read.md  2026-04-01.md  2026-04-02-market-report.md  2026-04-02-ps-share.md  2026-04-03-html-report-regen.md  2026-04-03-market-report.md  2026-04-04-dedup-before-create-rule.md  2026-04-04-indian-stocks.md  2026-04-05.md  2026-04-06-email-workflow-fix.md  2026-04-06-healthcheck-fix.md  2026-04-06-request-timed-out-before-a-res.md  2026-04-06-research-flow-fix.md  2026-04-07-default-model-set.md  2026-04-07-mempalace.md  2026-04-07-request-timed-out-before-a-res.md  2026-04-07-runtime-timeout.md  2026-04-07-timeout-fix.md  2026-04-07.md  2026-04-08-button-system.md  2026-04-08-email-attachment-fix.md  2026-04-08-gemma-castle.md  2026-04-08-heartbeat-checks.md  2026-04-08-identity-intro.md  2026-04-08-model-change-gemma4.md  2026-04-08-model-config.md  2026-04-08-model-fix.md  2026-04-08-remove-minimax.md  2026-04-08-request-timed-out-before-a-res.md  2026-04-08-research-wiki-built.md  2026-04-08-research-wiki-seed.md  2026-04-08-system-timeouts.md  2026-04-09-0510.md  2026-04-09-cron-data-gather-fix.md  2026-04-09-cron-list.md  2026-04-09-daily-report-fix.md  (+80 more)
prompts/: tmp_ocr_prompt.txt
scripts/: apply_phase2.py  auto_cleanup.py  build_ops_dashboard.py  build_pdf_email.py  build_pdf_report.py  canary_deploy.py  continuous_health_monitor.py  disaster_recovery_backup.py  disaster_recovery_test.py  fix_crons.py  fix_motivation_prompts.py  health_check.py  maa_dashboard.py  maa_demo.py  maa_doctor.py  maa_setup.py  maintenance_logger.py  maintenance_logger.py.backup-20260420215821  memory_dedup.py  pre_deploy_gate.sh  prune_old_sessions.py  run_prune.sh  secrets_scanner.py  send_telegram_market_brief.py  tenant_isolation_test.py  tenant_usage_governance_report.py  upload_to_drive.py
temp/: action_email_body.txt  email_body_progress.txt  fix_iso_test.py  fix_iso_test2.py  inspect_lines.py  metrics_export_test.json  phase13_runtime_verify.py  phase3_hostile_review_2026-04-21.md  progress.txt  rebuild.py  rebuild2.py  rebuild3.py  rebuild4.py  rebuild5.py  rebuild6.py  rebuild7.py  review_export.json  send_tree_email.py  signature_test_body.txt  signature_test_body_with_legacy.txt  verify_canary.py
tests/: test_cli.py  test_maa_protocol.py  test_persistence.py  test_security.py
(+625 files in other folders)
