[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "maa-protocol"
version = "0.3.0"
description = "Lightweight governance and control layer for LangGraph workflows"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Primeidea / Maa Protocol" }
]
dependencies = [
  "pydantic>=2.7",
]
keywords = ["langgraph", "governance", "rbac", "approval", "canary", "tenancy"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

[project.optional-dependencies]
langgraph = [
  "langgraph>=0.2"
]
dev = [
  "black>=24.0",
  "mypy>=1.10",
  "pytest>=8.0",
  "ruff>=0.5",
]

[tool.setuptools]
packages = [
  "maa_protocol",
  "maa_protocol.guards",
  "maa_protocol.persistence",
  "maa_protocol.observability",
  "maa_protocol.utils",
]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
