[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "maa-protocol"
version = "0.3.0"
description = "Enterprise AI orchestration platform — governance, swarm orchestration, self-learning, and advanced capabilities"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Primeidea / Maa Protocol" }
]
dependencies = [
  "pydantic>=2.7",
]
keywords = ["langgraph", "governance", "rbac", "approval", "canary", "tenancy", "swarm", "multi-agent", "rl", "reinforcement-learning"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

[project.optional-dependencies]
langgraph = [
  "langgraph>=0.2"
]
swarm = []
memory = []
learning = []
security = []
plugins = []
mcp = []
cli = ["click>=8.0", "rich>=13.0"]
sparc = []
workers = []
routing = []
all = [
  "numpy>=1.24",
  "scipy>=1.10",
  "click>=8.0",
  "rich>=13.0",
  "langgraph>=0.2",
]
dev = [
  "black>=24.0",
  "mypy>=1.10",
  "pytest>=8.0",
  "ruff>=0.5",
]

[project.scripts]
maa-x = "maa_protocol.cli:main"

[tool.setuptools]
packages = [
  "maa_protocol",
  "maa_protocol.guards",
  "maa_protocol.persistence",
  "maa_protocol.observability",
  "maa_protocol.utils",
  "maa_protocol.swarm",
  "maa_protocol.learning",
  "maa_protocol.security",
  "maa_protocol.plugins",
  "maa_protocol.mcp",
  "maa_protocol.cli",
  "maa_protocol.sparc",
  "maa_protocol.workers",
  "maa_protocol.routing",
]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true