[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "maa-protocol"
version = "0.3.1"
description = "Governance layer for LangGraph workflows with RBAC, tenant isolation, cost controls, canary releases, circuit breakers, and self-healing"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Primeidea / Maa Protocol" }
]
dependencies = [
  "pydantic>=2.7",
]
keywords = ["langgraph", "governance", "rbac", "approval", "canary", "tenancy", "observability"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

[project.optional-dependencies]
langgraph = ["langgraph>=0.2"]
cli = []
dev = [
  "mypy>=1.10",
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.5",
]

[project.scripts]
maa-x = "maa_protocol.cli:main"

[tool.setuptools.packages.find]
include = ["maa_protocol*"]
exclude = [
  "maa_protocol.learning*",
  "maa_protocol.mcp*",
  "maa_protocol.plugins*",
  "maa_protocol.routing*",
  "maa_protocol.security*",
  "maa_protocol.sparc*",
  "maa_protocol.swarm*",
  "maa_protocol.workers*",
  "tests*",
]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["maa-x", "runtime", "docs/archive-runtime"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "--cov=maa_protocol --cov-report=term-missing --cov-fail-under=80"
testpaths = ["tests"]
