[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "maa-x"
version = "0.1.0"
description = "Maa-X: Enterprise AI orchestration platform merging Maa Protocol governance with Ruflo capabilities"
readme = "README.md"
license = "MIT"
authors = [
    {name = "Primeidea", email = "partha@primeidea.in"}
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.optional-dependencies]
core = []
swarm = ["numpy>=1.24"]
memory = ["numpy>=1.24"]
learning = ["numpy>=1.24", "scipy>=1.10"]
security = []
plugins = []
mcp = []
cli = ["click>=8.0", "rich>=13.0"]
sparc = []
all = [
    "numpy>=1.24",
    "scipy>=1.10",
    "click>=8.0",
    "rich>=13.0",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[project.scripts]
maa-x = "maa_x.cli:main"

[tool.setuptools]
packages = ["maa_x"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = false
warn_return_any = true
warn_unused_configs = true